<resources>
    <string name="app_name">finalProject</string>
    <string name="budgetbee">BudgetBee</string>
    <string name="income">Income</string>
    <string name="calculate_budget">Calculate Budget</string>
    <string name="budget">Budget</string>
    <string name="hello_there">Hello there!</string>
    <string name="return_back">Return Back</string>
    <string name="please_type_your_estimated_monthly_income">Please Type Estimated Monthly Income:</string>
    <string name="spent">Spent</string>
    <string name="remaining">Remaining</string>
    <string name="please_type_a_month_and_year">Please Type a Month and Year</string>
    <string name="charity">Charity</string>
    <string name="home">Home</string>
    <string name="food">Food: </string>
    <string name="gas">Gas: </string>
    <string name="utilities">Utilities: </string>
    <string name="insurance">Insurance: </string>
    <string name="house">House</string>
    <string name="moneyspent">Money Spent</string>
    <string name="moneyremaining">Money Remaining</string>
    <string name="add">ADD</string>
    <string name="listBudgetItems">Budget Items</string>
    <string name="rent_mortgage">Rent/Mortgage</string>
    <string name="monthly_income">Monthly Income</string>
    <string name="utilities2">Utilities</string>
    <string name="phone">Phone</string>
    <string name="internet">Internet</string>
    <string name="gym">Gym</string>
    <string name="food2">Food</string>
    <string name="gas2">Gas</string>
    <string name="insurance2">Insurance</string>
    <string name="car_loan">Car Loan</string>
    <string name="student_loan">Student Loan</string>
    <string name="charity2">Charity</string>
    <string name="emergency_fund">Emergency Fund</string>
    <string name="savings">Savings</string>
    <string name="retirement">Retirement</string>
    <string name="budget_items">Budget Items</string>
    <string name="add2">ADD</string>
    <string name="view">View</string>
    <string name="refresh">Refresh</string>
    <string name="refresh_budget">Refresh Budget</string>
    <string name="empty" />
    <string name="dollarsign">$</string>
    <string name="add_new_budget">Add New Budget</string>
    <string name="update_current_budget">Update Current Budget</string>
    <string name="update_budget">Update Budget</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register_an_account">Register An Account</string>
    <string name="savings2">Savings</string>
    <string name="please_enter_your_savings_goal_for_this_month">Please enter your savings goal for this month!</string>
    <string name="add_goal">Add Goal</string>
    <string name="add_money">Add Money</string>
    <string name="space" />
    <string name="additional_income">Additional Income</string>
    <string name="spend">Spend</string>
    <string name="canvas">Canvas</string>
    <string name="back">Back</string>
    <string name="clear_signature">Clear Signature</string>
    <string name="save_signature">Save Signature</string>
    <string name="please_draw_your_signature">Please Draw Your Signature</string>
    <string name="favorite_budget_investment_videos">Favorite Budget/Investment Videos</string>
    <string name="budget_101_dave_ramsey">Budget 101 - Dave Ramsey</string>
    <string name="investing_101_vivian_tu">Investing 101 - Vivian Tu</string>
    <string name="videos">Videos</string>
    <string name="spend2">Spend</string>
    <string name="title_activity_gps">gps</string>

</resources>